--- a/package.json
+++ b/package.json
@@ -32,18 +32,29 @@
     "loader/"
   ],
   "scripts": {
+    "convert-openapi": "js-yaml  ./api/ambulance-wl.openapi.yaml > .openapi.json",
+    "mock-api": "open-api-mocker --schema .openapi.json --port 5555",
+    "start:app": "stencil build --dev --watch --serve",
+    "start:mock": "run-s convert-openapi mock-api",
+    "start": "run-p -r start:mock start:app",
     "build": "stencil build",
-    "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "openapi": "openapi-generator-cli generate",
+    "test:jest": "jest --config ./jest.config.js"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.17.0",
     "@stencil/core": "^4.7.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^16.18.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "js-yaml": "^4.1.0",
+    "npm-run-all": "^4.1.5",
+    "open-api-mocker": "^2.0.0",
     "puppeteer": "^21.9.0"
   },
   "license": "MIT",
